doc/paper/tst/jalangi_test/timeResultsLya.txt
The name of file 3d-cube.js

real	2m11.598s
user	2m5.364s
sys	0m6.748s
The name of file 3d-morph.js

real	3m31.315s
user	3m31.144s
sys	0m0.460s
The name of file 3d-raytrace.js

real	0m50.779s
user	0m50.972s
sys	0m0.104s
The name of file access-binary-trees.js

real	0m1.998s
user	0m2.000s
sys	0m0.020s
The name of file access-fannkuch.js

real	0m0.564s
user	0m0.548s
sys	0m0.016s
The name of file access-nbody.js

real	0m21.025s
user	0m21.028s
sys	0m0.140s
The name of file access-nsieve.js

real	0m0.320s
user	0m0.260s
sys	0m0.064s
The name of file bitops-3bit-bits-in-byte.js

real	0m0.234s
user	0m0.228s
sys	0m0.008s
The name of file bitops-bits-in-byte.js

real	0m0.483s
user	0m0.476s
sys	0m0.008s
The name of file bitops-bitwise-and.js

real	22m51.471s
user	22m51.372s
sys	0m2.836s
The name of file bitops-nsieve-bits.js

real	0m0.297s
user	0m0.296s
sys	0m0.000s
The name of file controlflow-recursive.js

real	0m0.470s
user	0m0.468s
sys	0m0.008s
The name of file crypto-aes.js

real	0m14.645s
user	0m14.720s
sys	0m0.164s
The name of file crypto-md5.js

real	0m10.402s
user	0m10.372s
sys	0m0.080s
The name of file crypto-sha1.js

real	0m8.845s
user	0m8.820s
sys	0m0.056s
The name of file date-format-tofte.js
undefined:1
Y()
^

ReferenceError: Y is not defined
    at eval (eval at _obj (/home/lya/core/src/txfm.js:450:20), <anonymous>:1:1)
    at eval (<anonymous>)
    at eval (/home/lya/core/src/txfm.js:450:20)
    at Object.apply (/home/lya/core/src/txfm.js:156:32)
    at Date.formatDate (/home/lya/paper/tst/jalangi_test/sunspider/date-format-tofte.js:364:26)
    at Object.<anonymous> (/home/lya/paper/tst/jalangi_test/sunspider/date-format-tofte.js:379:28)
    at Object.apply (/home/lya/core/src/txfm.js:300:22)
    at Module._compile (internal/modules/cjs/loader.js:1144:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1164:10)
    at Module.load (internal/modules/cjs/loader.js:993:32)

real	0m0.053s
user	0m0.044s
sys	0m0.008s
The name of file date-format-xparb.js
undefined:1
Date.prototype.format0 = function(){return this.getFullYear() + '-' + String.leftPad(this.getMonth() + 1, 2, '0') + '-' + String.leftPad(this.getDate(), 2, '0');}
                                                                             ^

TypeError: String.leftPad is not a function
    at Date.format0 (eval at _obj (/home/lya/core/src/txfm.js:450:20), <anonymous>:1:78)
    at Date.dateFormat (/home/lya/paper/tst/jalangi_test/sunspider/date-format-xparb.js:107:22)
    at Object.<anonymous> (/home/lya/paper/tst/jalangi_test/sunspider/date-format-xparb.js:498:28)
    at Object.apply (/home/lya/core/src/txfm.js:300:22)
    at Module._compile (internal/modules/cjs/loader.js:1144:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1164:10)
    at Module.load (internal/modules/cjs/loader.js:993:32)
    at Function.Module._load (internal/modules/cjs/loader.js:892:14)
    at Module.require (internal/modules/cjs/loader.js:1033:19)
    at Module.require (/home/lya/core/src/txfm.js:542:41)

real	0m0.053s
user	0m0.040s
sys	0m0.012s
The name of file math-cordic.js

real	1m22.171s
user	1m22.240s
sys	0m0.176s
The name of file math-partial-sums.js

real	10m48.706s
user	10m48.620s
sys	0m1.192s
The name of file math-spectral-norm.js

real	0m0.419s
user	0m0.428s
sys	0m0.008s
The name of file regexp-dna.js

real	0m0.957s
user	0m0.916s
sys	0m0.052s
The name of file string-base64.js

real	0m52.746s
user	0m52.736s
sys	0m0.116s
The name of file string-fasta.js

real	1m29.934s
user	1m30.000s
sys	0m0.192s
The name of file string-tagcloud.js

real	0m7.421s
user	0m7.444s
sys	0m0.092s
The name of file string-unpack-code.js

real	0m4.820s
user	0m4.800s
sys	0m0.080s
The name of file string-validate-input.js

real	0m0.133s
user	0m0.132s
sys	0m0.012s
